--- a/public/patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.escaped.html
+++ b/public/patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.escaped.html
@@ -1,4 +1,4 @@
-&lt;h3&gt;Yleisesti k&auml;yt&ouml;ss&auml; olevat v&auml;rit&lt;/h3&gt;
+&lt;h3&gt;Yhteiset V&auml;rit&lt;/h3&gt;
 &lt;ul class=&quot;sg-colors global-colors&quot;&gt;
 	&lt;li&gt;
 		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
@@ -16,48 +16,60 @@
 		&lt;span class=&quot;sg-swatch color--d&quot;&gt;&lt;/span&gt;
 		&lt;span class=&quot;sg-label&quot;&gt;#0089F2&lt;/span&gt;
 	&lt;/li&gt;
-&lt;/ul&gt;
-
-&lt;h3&gt;Ota kantaa -v&auml;rit&lt;/h3&gt;
-&lt;ul class=&quot;sg-colors otk-colors&quot;&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch color--e&quot;&gt;&lt;/span&gt;
 		&lt;span class=&quot;sg-label&quot;&gt;#FF0000&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--b&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#556771&lt;/span&gt;
-	&lt;/li&gt;
-	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--c&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#17CEE4&lt;/span&gt;
-	&lt;/li&gt;
-	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--d&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch color--f&quot;&gt;&lt;/span&gt;
 		&lt;span class=&quot;sg-label&quot;&gt;#2FC090&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--e&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#3FA2FE&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch color--g&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#E3E3E3&lt;/span&gt;
 	&lt;/li&gt;
 &lt;/ul&gt;
 
-&lt;h3&gt;Lausuntopalvelu -v&auml;rit&lt;/h3&gt;
-&lt;ul class=&quot;sg-colors lap-colors&quot;&gt;
+&lt;h3&gt;Otakantaa&lt;/h3&gt;
+&lt;ul class=&quot;sg-colors ot-colors&quot;&gt;
 	&lt;li&gt;
 		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#E1EAEF&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#17CEE4&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
 		&lt;span class=&quot;sg-swatch color--b&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#313131&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#D4DC3F&lt;/span&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
+
+&lt;h3&gt;Lausuntopalvelu&lt;/h3&gt;
+&lt;ul class=&quot;sg-colors lap-colors&quot;&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#F16521&lt;/span&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
+
+&lt;h3&gt;Kansalaisaloite&lt;/h3&gt;
+&lt;ul class=&quot;sg-colors kaa-colors&quot;&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#077480&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--c&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#0891A1&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch color--b&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#BB448E&lt;/span&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
+
+&lt;h3&gt;Kuntalaisaloite&lt;/h3&gt;
+&lt;ul class=&quot;sg-colors kua-colors&quot;&gt;
+	&lt;li&gt;
+		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#ADAD2D&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--d&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#0F6A9E&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch color--b&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#E2A31C&lt;/span&gt;
 	&lt;/li&gt;
 &lt;/ul&gt;
