--- a/public/patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.html
+++ b/public/patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.html
@@ -8,7 +8,7 @@
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 
-		<link rel="stylesheet" href="../../css/style.css?1400500827" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1400502233" media="all" />
 
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 				<!-- never cache patterns -->
@@ -18,15 +18,15 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1400500827" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1400500827" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1400502233" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1400502233" media="all" />
 		
 
 		<!-- End Pattern Lab -->
 
 	</head>
 	<body class="body">
-<h3>Yleisesti käytössä olevat värit</h3>
+<h3>Yhteiset Värit</h3>
 <ul class="sg-colors global-colors">
 	<li>
 		<span class="sg-swatch color--a"></span>
@@ -44,51 +44,64 @@
 		<span class="sg-swatch color--d"></span>
 		<span class="sg-label">#0089F2</span>
 	</li>
-</ul>
-
-<h3>Ota kantaa -värit</h3>
-<ul class="sg-colors otk-colors">
 	<li>
-		<span class="sg-swatch color--a"></span>
+		<span class="sg-swatch color--e"></span>
 		<span class="sg-label">#FF0000</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--b"></span>
-		<span class="sg-label">#556771</span>
-	</li>
-	<li>
-		<span class="sg-swatch color--c"></span>
-		<span class="sg-label">#17CEE4</span>
-	</li>
-	<li>
-		<span class="sg-swatch color--d"></span>
+		<span class="sg-swatch color--f"></span>
 		<span class="sg-label">#2FC090</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--e"></span>
-		<span class="sg-label">#3FA2FE</span>
+		<span class="sg-swatch color--g"></span>
+		<span class="sg-label">#E3E3E3</span>
 	</li>
 </ul>
 
-<h3>Lausuntopalvelu -värit</h3>
-<ul class="sg-colors lap-colors">
+<h3>Otakantaa</h3>
+<ul class="sg-colors ot-colors">
 	<li>
 		<span class="sg-swatch color--a"></span>
-		<span class="sg-label">#E1EAEF</span>
+		<span class="sg-label">#17CEE4</span>
 	</li>
 	<li>
 		<span class="sg-swatch color--b"></span>
-		<span class="sg-label">#313131</span>
+		<span class="sg-label">#D4DC3F</span>
+	</li>
+</ul>
+
+<h3>Lausuntopalvelu</h3>
+<ul class="sg-colors lap-colors">
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#F16521</span>
+	</li>
+</ul>
+
+<h3>Kansalaisaloite</h3>
+<ul class="sg-colors kaa-colors">
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#077480</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--c"></span>
-		<span class="sg-label">#0891A1</span>
+		<span class="sg-swatch color--b"></span>
+		<span class="sg-label">#BB448E</span>
+	</li>
+</ul>
+
+<h3>Kuntalaisaloite</h3>
+<ul class="sg-colors kua-colors">
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#ADAD2D</span>
 	</li>
 	<li>
-		<span class="sg-swatch color--d"></span>
-		<span class="sg-label">#0F6A9E</span>
+		<span class="sg-swatch color--b"></span>
+		<span class="sg-label">#E2A31C</span>
 	</li>
-</ul>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+</ul>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 	<script type="text/javascript" src="../../js/plugins.min.js"></script>
 	<script type="text/javascript" src="../../js/main.min.js"></script>
@@ -134,10 +147,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1400500827">
+	<script id="pl-js-polyfill-insert-1400502233">
 		(function() {
 			if (self != top) {
-				var cb = '1400500827';
+				var cb = '1400502233';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -146,10 +159,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1400500827">
+	<script id="pl-js-insert-1400502233">
 		(function() {
 			if (self != top) {
-				var cb = '1400500827';
+				var cb = '1400502233';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
